--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@types/node-cron": "^3.0.8",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
